[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powergrid-env"
version = "1.0.0"
description = "OpenEnv-compatible microgrid energy management environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Meta Hackathon Team" }]

keywords = ["reinforcement-learning", "power-systems", "energy", "openenv", "llm"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
openenv = ["openenv-core>=0.3.0"]
training = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "unsloth",
    "wandb",
    "matplotlib",
    "pandas",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff",
]

[project.scripts]
powergrid-serve = "powergrid_env.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["powergrid_env"]

[tool.ruff]
line-length = 100
target-version = "py311"
